# 1cijferho

./: .env.example  .gitignore  404.html  ARCHITECTURE.md  BEVINDINGEN_DECODEER.md  CEDA-run.bat  CLAUDE.md  Dockerfile  LICENSE  MANIFEST.in  PLANNING.md  README.md  ROADMAP.md  TECHNICAL_README.md  decoder_mapping_config.yaml  decoding_files_config.yaml  docker-compose.yml  index.html  init.sql  manual_tables_config.yaml  mapping_tables_config.yaml  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  requirements.txt  scoop-install.cmd  scoop-uninstall.cmd  sitemap.xml  v0-1-3.md
.claude/skills/compare/: SKILL.md
.claude/skills/profile/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml  init.sql
.github/workflows/: bandit.yml  ci.yml  codeql.yml  docs.yml  minio-pipeline.yml  minio.yml  pipeline.yml  pypi-publish.yml  semgrep.yml  sonarcloud.yml  test-install.yml  test-scoop-installer.yml  unit.yml
.streamlit/: config.toml
api/: index.html
cli/: index.html
data/: koppeling_bsn_studentnummer_VOORBEELD.csv  koppeling_pgn_studentnummer_VOORBEELD.csv
data/01-input/: Bestandsbeschrijving_1cyferho_2023_v1.1_DEMO.txt  Bestandsbeschrijving_Dec-bestanden_DEMO.txt  Bestandsbeschrijving_Vakkenbestanden_DEMO.txt  Dec_landcode.asc
data/01-input/DEMO/: Bestandsbeschrijving_1cyferho_2025_v1.0.txt  Bestandsbeschrijving_Croho.txt  Bestandsbeschrijving_Croho_vest.txt  Bestandsbeschrijving_Dec-bestanden.txt  Croho.asc  Croho_vest.asc  Dec_actuele_instelling.asc  Dec_brinnummer.asc  Dec_brinvestigingsnummer.asc  Dec_ho-inst.asc  Dec_ho_ISCED.asc  Dec_instellingscode.asc  Dec_isat.asc  Dec_land_naar_herkomstindikking.asc  Dec_landcode.asc  Dec_nationaliteitscode.asc  Dec_postcodecijfers_2024.asc  Dec_postcodecijfers_2025.asc  Dec_postcodecijfers_2026.asc  Dec_vakcode.asc  Dec_vestigingscode.asc  Dec_vestnr_ho.asc  Dec_vestnr_ho_compleet.asc  Dec_vooropl.asc
data/01-input/demo/: Bestandsbeschrijving_1cyferho_2023_v1.1.txt  Bestandsbeschrijving_Dec-bestanden.txt  (+2 more)
data/reference/: code_beeindiging_label.csv  code_examenresultaat_label.csv  croho_onderdeel_actuele_opleiding_label.csv  croho_subonderdeel_actuele_opleiding_label.csv  etniciteit_label.csv  generatie_label.csv  geslacht_label.csv  herkomst_indikking_volgens_cbs_definitie_label.csv  indicatie_actief_op_peildatum_label.csv  indicatie_eer_actueel_label.csv  indicatie_eerstejaars_actuele_instelling_label.csv  indicatie_eerstejaars_actuele_opleiding_instelling_label.csv  indicatie_eerstejaars_continu_actuele_instelling_label.csv  indicatie_eerstejaars_continu_hoger_onderwijs_label.csv  indicatie_eerstejaars_continu_soort_ho_label.csv  indicatie_eerstejaars_continu_type_ho_binnen_ho_label.csv  indicatie_eerstejaars_opleiding_actueel_equivalent_label.csv  indicatie_eerstejrs_act._inst_type_ho_binnen_soort_ho_label.csv  indicatie_geboren_label.csv  indicatie_internationale_student_label.csv  indicatie_soort_programma_label.csv  indicatie_university_college_label.csv  inschrijvingsvorm_label.csv  opleidingsfase_actueel_label.csv  opleidingsfase_actueel_van_het_diploma_label.csv  opleidingsfase_label.csv  opleidingsvorm_label.csv  postcodecijfers_van_de_hoogste_vooropl._voor_het_ho_label.csv  soort_diploma_hoger_onderwijs_internat.statistiek_label.csv  soort_diploma_hoger_onderwijs_label.csv  soort_diploma_instelling_label.csv  soort_diploma_soort_hoger_onderwijs_label.csv  soort_hoger_onderwijs_label.csv  soort_inschrijving_act._inst_type_ho_binnen_soort_ho_label.csv  soort_inschrijving_actuele_instelling_label.csv  soort_inschrijving_actuele_opleiding_instelling_label.csv  soort_inschrijving_continu_actuele_instelling_label.csv  soort_inschrijving_continu_hoger_onderwijs_label.csv  soort_inschrijving_continu_soort_ho_label.csv  soort_inschrijving_continu_type_ho_binnen_ho_label.csv  (+6 more)
dev/: eerstejaars_croho.csv  eerstejaars_per_croho.md  eerstejaars_per_croho.py  parse_metadata_to_json.py  record_demo.py
dev/notebooks/: validate_output.ipynb
dev/validation/: compare_data.py  compare_decoded_vs_original.py  profile_data.py
docs/: cli.md  getting-started.md  index.md  storage-abstraction.md
docs/api/: index.md
getting-started/: index.html
notebooks/1cijferho_avans/: 1CHO_inlezen.R  1_Instroom.R  2_Rendementen.R  3_Uitval.R  4_Studiewissel.R  5_Combineer_alle_data.R  Labels inlezen.R
ps/: scoop-install.ps1  scoop-uninstall.ps1
scripts/: setup-onedrive-sim.ps1  test-ceda-store-compat.ps1  test-install.ps1  verify-install.ps1
search/: search_index.json
snapshots/c1/: snapshot.json
snapshots/c2/: snapshot.json
snapshots/c3/: snapshot.json
snapshots/csv-decoded-enriched/: snapshot.json
snapshots/csv-raw/: snapshot.json
snapshots/full-pipeline/: snapshot.json
src/: config.py  main.py  pipeline.py  streamlit_postgres_test.py
src/api/: README.md  __init__.py  main.py  models.py
src/backend/: dashboard_analytics.py  dashboard_logic.py  debug_run.py  file_handler.py  manual_run.py  run.py  vakhavw_dashboard_analytics.py
src/cijferho/: README.md
src/config/: screen_scanner.py
src/eencijferho/: __init__.py  cli.py  config.py  presets.py
src/frontend/: Data_Explorer.py  Home.py
storage-abstraction/: index.html
tests/: conftest.py  test_config.py  test_context.py  test_decorators.py  test_disk_backend.py  test_extractor.py  test_matching_and_validation.py  test_minio_backend.py  test_postgres_backend.py  test_utilities.py
tests/eencijferho/: test_cli.py  test_config.py  test_io.py  test_personal_data_security.py
tests/integration/: conftest.py  test_minio_backend.py  test_personal_data.py
(+124 files in other folders)
