[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
cache-dir = "./.uv_cache"

[project]
name = "eencijferho"
version = "0.1.5"
description = "Standalone backend processing toolkit for 1CijferHO"
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = {text = "MIT"}
authors = [
    {name = "CEDA", email = "info@cedanl.nl"},
    {name = "Ash Sewnandan"}
]
keywords = ["data-processing", "education", "higher-education", "1cijferho", "cbs"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Education",
]
dependencies = [
    "openpyxl>=3.1.5",
    "polars[excel]>=1.21.0",
    "rich>=13.9.4",
    "xlsxwriter>=3.2.2",
]

[project.urls]
Homepage = "https://github.com/cedanl/1cijferho"
Documentation = "https://cedanl.github.io/1cijferho/"
Repository = "https://github.com/cedanl/1cijferho"
Issues = "https://github.com/cedanl/1cijferho/issues"

[project.optional-dependencies]
frontend = [
    "streamlit>=1.41.1",
    "streamlit-extras>=0.6.0",
]
dev = [
    "ruff>=0.10.0",
    "ydata-profiling>=4.10",
    "sweetviz>=2.3",
    "jupyter>=1.0",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
]
minio = [
    "minio>=7.2",
]
postgres = [
    "psycopg2-binary>=2.9",
    "sqlalchemy>=2.0",
]
all-backends = [
    "eencijferho[minio]",
    "eencijferho[postgres]",
]

[project.scripts]
eencijferho = "eencijferho.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["eencijferho*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
    "ignore:.*use of fork.*may lead to deadlocks in the child.*:DeprecationWarning",
]
